@@ -1,3 +1,14 @@
+2002-08-28  Danny Smith  <dannysmith@users.sourceforge.net>
+
+	* include/sys/param.h: Add ENDIAN defines.
+	* test_headers.c: Include sys/param.h.
+
+2002-08-28  Danny Smith  <dannysmith@users.sourceforge.net>
+
+	* test_headers.c: Don't include varargs.h.
+	* Makefile.in (test_headers): Don't use -std=xx
+	with -xc++.
+
 2002-08-21  Earnie Boyd  <earnie@users.sf.net>
 
 	* include/sys/param.h: New File.
